// checkIn.proto
syntax = "proto3";

package hotel;

service CheckInService {
  // Using client streaming to exemplify
  rpc CheckIn (stream CheckInRequest) returns (CheckInResponse);
}

message CheckInRequest {
  int32 bookingId = 1;
  string guestName = 2;
}

message CheckInResponse {
  bool success = 1;
  string message = 2;
  int32 roomId = 3;
}